--- a/src/information.html
+++ b/src/information.html
@@ -198,7 +198,7 @@
               <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
               <div class="bar3">
                 <div class="ball3">
-                  <p>3</p>
+                  <a href="betal.html"><p>3</p></a>
                 </div>
                 <div class="line3"></div>
               </div>
@@ -225,7 +225,7 @@
                 <h4
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
-                  Fornavn og efternavn
+                  Fornavn og efternavn <span class="text-rust-500">*</span>
                 </h4>
                 <label for="betaling">
                   <input
@@ -240,7 +240,7 @@
                 <h4
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
-                  Leveringsadresse
+                  Leveringsadresse <span class="text-rust-500">*</span>
                 </h4>
                 <label for="betaling">
                   <input
@@ -255,7 +255,7 @@
                 <h4
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
-                  Email
+                  Email <span class="text-rust-500">*</span>
                 </h4>
                 <label for="betaling">
                   <input
