--- a/src/kurv.html
+++ b/src/kurv.html
@@ -187,7 +187,7 @@
               <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
               <div class="bar3">
                 <div class="ball3">
-                  <p>3</p>
+                  <a href="betal.html"><p>3</p></a>
                 </div>
                 <div class="line3"></div>
               </div>
@@ -220,6 +220,20 @@
             <div
               class="rounded-radius-mobile border-2 border-color-headings lg:w-[600px] lg:border-none"
             >
+              <div
+                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+              >
+                <h4
+                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
+                >
+                  Størrelse
+                </h4>
+                <p
+                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+                >
+                  Lille
+                </p>
+              </div>
               <div
                 class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
@@ -277,22 +291,21 @@
                 </p>
               </div>
             </div>
-
-            <div
-              class="flex justify-between pt-xl-spacing-mobile lg:justify-evenly lg:pt-xl-spacing-desktop"
-            >
-              <div class="secondary">
-                <button class="mx-auto">
-                  <a href="abonnement.html">Rediger</a>
-                </button>
-              </div>
-              <div class="primary">
-                <button class="mx-auto">
-                  <a href="information.html">Videre</a>
-                </button>
-              </div>
-            </div>
           </article>
+          <div
+            class="flex justify-between pt-xl-spacing-mobile lg:justify-evenly lg:pt-xl-spacing-desktop"
+          >
+            <div class="secondary">
+              <button class="mx-auto">
+                <a href="abonnement.html">Rediger</a>
+              </button>
+            </div>
+            <div class="primary">
+              <button class="mx-auto">
+                <a href="information.html">Videre</a>
+              </button>
+            </div>
+          </div>
         </section>
       </section>
     </main>
