--- a/src/betal.html
+++ b/src/betal.html
@@ -288,6 +288,11 @@
               >
                 Betalingsmetode
               </h2>
+              <h3
+                class="pb-xs-spacing-mobile text-center font-other-headings text-h3-mobile"
+              >
+                - Vælg betalingsmetode -
+              </h3>
             </div>
             <div class="flex flex-col gap-[27px] lg:gap-[44px]">
               <a href="betal_kreditkort.html">
