--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -217,88 +217,100 @@
           </div>
         </article>
       </section>
-      <div class="">
-        <section>
-          <article>
-            <form
-              class="lg:flex lg:justify-around lg:pb-xl-spacing-desktop"
-              action="udfyld"
-            >
-              <div class="">
-                <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                  <h4
-                    class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                  >
-                    Fulde navn kortholder <span class="text-rust-500">*</span>
-                  </h4>
-                  <label for="betaling">
-                    <input
-                      class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                      type="text"
-                      value=""
-                      placeholder="Fx. Sofie Larsen"
-                    />
-                  </label>
-                </div>
-                <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                  <h4
-                    class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                  >
-                    Kortnummer <span class="text-rust-500">*</span>
-                  </h4>
-                  <label for="betaling">
-                    <input
-                      class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                      type="text"
-                      value=""
-                      placeholder="Fx. 1234 1234 1234 1234"
-                    />
-                  </label>
-                </div>
-                <div class="flex gap-10">
-                  <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                    <h4
-                      class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                    >
-                      Udløbsdato <span class="text-rust-500">*</span>
-                    </h4>
-                    <label for="betaling">
-                      <input
-                        class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                        type="text"
-                        value=""
-                        placeholder="MM / ÅÅ"
-                      />
-                    </label>
-                  </div>
-                  <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                    <h4
-                      class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                    >
-                      Kontrolcifre <span class="text-rust-500">*</span>
-                    </h4>
-                    <label for="betaling">
-                      <input
-                        class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                        type="tel"
-                        value=""
-                        placeholder="CVC"
-                      />
-                    </label>
-                  </div>
-                </div>
-              </div>
 
-              <div class="flex gap-5">
-                <input class="h-8 w-8" type="checkbox" />
-                <p class="font-font-body text-body-mobile lg:text-body-desktop">
-                  Jeg har læst og accepterer vilkår og betingelser
-                </p>
+      <section>
+        <article>
+          <div class="py-s-spacing-mobile lg:flex">
+            <a
+              class="font-font-body text-abonnement-text-spand underline opacity-50 hover:opacity-100"
+              href="betal.html"
+              >Tilbage</a
+            >
+          </div>
+
+          <form
+            class="lg:flex lg:place-content-center lg:gap-40 lg:pb-xl-spacing-desktop"
+            action="udfyld"
+          >
+            <div class="">
+              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
+                <h4
+                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
+                >
+                  Fulde navn kortholder <span class="text-rust-500">*</span>
+                </h4>
+                <label for="betaling">
+                  <input
+                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
+                    type="text"
+                    value=""
+                    placeholder="Fx. Sofie Larsen"
+                  />
+                </label>
               </div>
-            </form>
-          </article>
-        </section>
-      </div>
+              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
+                <h4
+                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
+                >
+                  Kortnummer <span class="text-rust-500">*</span>
+                </h4>
+                <label for="betaling">
+                  <input
+                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
+                    type="text"
+                    value=""
+                    placeholder="Fx. 1234 1234 1234 1234"
+                  />
+                </label>
+              </div>
+            </div>
+
+            <div class="flex gap-10 lg:flex-col lg:gap-0">
+              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
+                <h4
+                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
+                >
+                  Udløbsdato <span class="text-rust-500">*</span>
+                </h4>
+                <label for="betaling">
+                  <input
+                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
+                    type="text"
+                    value=""
+                    placeholder="MM / ÅÅ"
+                  />
+                </label>
+              </div>
+              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
+                <h4
+                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
+                >
+                  Kontrolcifre <span class="text-rust-500">*</span>
+                </h4>
+                <label for="betaling">
+                  <input
+                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
+                    type="text"
+                    value=""
+                    placeholder="CVC"
+                  />
+                </label>
+              </div>
+            </div>
+          </form>
+          <div class="flex gap-5 lg:place-content-center">
+            <input class="h-8 w-8" type="checkbox" />
+            <p class="font-font-body text-body-mobile lg:text-body-desktop">
+              Jeg har læst og accepterer vilkår og betingelser
+            </p>
+          </div>
+          <div class="primary py-xl-spacing-mobile lg:py-xl-spacing-desktop">
+            <button class="mx-auto">
+              <a href="bekraeft.html">Betal</a>
+            </button>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
