--- a/src/kurv.html
+++ b/src/kurv.html
@@ -178,7 +178,7 @@
               <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
               <div class="bar2">
                 <div class="ball2">
-                  <a href="information.html"><p>2</p></a>
+                  <p>2</p>
                 </div>
                 <div class="line2"></div>
               </div>
@@ -187,7 +187,7 @@
               <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
               <div class="bar3">
                 <div class="ball3">
-                  <a href="betal.html"><p>3</p></a>
+                  <p>3</p>
                 </div>
                 <div class="line3"></div>
               </div>
@@ -202,96 +202,89 @@
             </div>
           </div>
         </article>
-        <div>
-          <h3
-            class="pb-l-spacing-mobile text-center text-h3-mobile lg:pb-l-spacing-desktop"
-          >
-            Abonnement Oplysninger
-          </h3>
-        </div>
-        <section class="lg:flex">
-          <article class="pb-xxl-spacing-mobile lg:pb-xxl-spacing-desktop">
-            <div class="">
-              <img class="-ml-10" src="img/abonnement_filler.webp" alt="" />
-            </div>
-          </article>
+      </section>
 
-          <article>
-            <div
-              class="rounded-radius-mobile border-2 border-color-headings lg:w-[600px] lg:border-none"
-            >
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h4
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Størrelse
-                </h4>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Lille
-                </p>
-              </div>
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h4
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Stil
-                </h4>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Neutral og tæt
-                </p>
-              </div>
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h4
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Sensitiv ja/nej
-                </h4>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Nej
-                </p>
-              </div>
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h4
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Hyppighed
-                </h4>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  Hver anden uge
-                </p>
-              </div>
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
-              >
-                <h4
-                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
-                >
-                  Subtotal
-                </h4>
-                <p
-                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
-                >
-                  620 kr
-                </p>
-              </div>
+      <section class="gap-20 lg:grid lg:grid-cols-2">
+        <article class="pb-xxl-spacing-mobile lg:pb-xxl-spacing-desktop">
+          <div class="lg:flex lg:flex-col-reverse">
+            <div class="">
+              <img class="" src="img/abonnement_filler.webp" alt="" />
             </div>
-          </article>
+            <div>
+              <h3
+                class="pb-l-spacing-mobile text-center text-h3-mobile lg:pb-l-spacing-desktop lg:text-h3-desktop"
+              >
+                Abonnement Oplysninger
+              </h3>
+            </div>
+          </div>
+        </article>
+
+        <article>
+          <div
+            class="rounded-radius-mobile border-2 border-color-headings lg:w-[600px] lg:border-none"
+          >
+            <div
+              class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+            >
+              <h4 class="font-other-headings text-h4-mobile lg:text-h4-desktop">
+                Størrelse
+              </h4>
+              <p
+                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+              >
+                Lille
+              </p>
+            </div>
+            <div
+              class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+            >
+              <h4 class="font-other-headings text-h4-mobile lg:text-h4-desktop">
+                Stil
+              </h4>
+              <p
+                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+              >
+                Neutral og tæt
+              </p>
+            </div>
+            <div
+              class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+            >
+              <h4 class="font-other-headings text-h4-mobile lg:text-h4-desktop">
+                Sensitiv ja/nej
+              </h4>
+              <p
+                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+              >
+                Nej
+              </p>
+            </div>
+            <div
+              class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+            >
+              <h4 class="font-other-headings text-h4-mobile lg:text-h4-desktop">
+                Hyppighed
+              </h4>
+              <p
+                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+              >
+                Hver anden uge
+              </p>
+            </div>
+            <div
+              class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+            >
+              <h4 class="font-other-headings text-h4-mobile lg:text-h4-desktop">
+                Subtotal
+              </h4>
+              <p
+                class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+              >
+                620 kr
+              </p>
+            </div>
+          </div>
           <div
             class="flex justify-between pt-xl-spacing-mobile lg:justify-evenly lg:pt-xl-spacing-desktop"
           >
@@ -306,7 +299,7 @@
               </button>
             </div>
           </div>
-        </section>
+        </article>
       </section>
     </main>
   </body>
